--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Authentication Portal</title>
+  <title>Secure Access Portal</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Font Awesome for icons -->
@@ -175,9 +175,10 @@
   </div>
 
   <footer>
-    <p>© 2025 Made by The Rope Garage Co. All rights reserved.</p>
+    <p>© 2025 Made by biswasasit14-max on GitHub. All rights reserved.</p>
   </footer>
 
   <script src="script.js"></script>
 </body>
 </html>
+
