--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </style>
 </head>
 <body>
-  <h1>Authentication Portal</h1>
+  <h1>Access Gateway</h1>
 
   <div class="captchaBox">
     <form id="secureForm" action="verify.php" method="POST">
@@ -36,7 +36,7 @@
       </div>
 
       <!-- reCAPTCHA widget -->
-      <div class="g-recaptcha" data-sitekey="YOUR_SITE_KEY"></div>
+      <div class="g-recaptcha" data-sitekey="6LepPCssAAAAAKiWquVC9uYs8oZQM8qL0BCNDxmk"></div>
 
       <button class="btn" type="submit">
         <i class="fas fa-key"></i> Submit
@@ -58,3 +58,4 @@
   <script src="script-verify.js"></script>
 </body>
 </html>
+
