--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
       <button class="btn" type="submit">
         <i class="fas fa-key"></i> Submit
       </button>
+
+      <button class="btn" id="myButton" type="button" disabled> 
+        <i class="fas fa-link"></i> Continue 
+      </button>
     </form>
 
     <p>
@@ -58,4 +62,5 @@
   <script src="script-verify.js"></script>
 </body>
 </html>
+
 
