--- a/index.html
+++ b/index.html
@@ -134,6 +134,28 @@
       color: #666;
     }
 
+    /* Anchor styles for Get Passkey link */
+    .get-passkey {
+      display: inline-block;
+      margin-top: 16px;
+      padding: 10px 18px;
+      background: linear-gradient(135deg, #2196F3, #1565C0);
+      color: white;
+      border-radius: 8px;
+      text-decoration: none;
+      font-weight: 600;
+      transition: background 0.3s ease, transform 0.2s ease, box-shadow 0.3s ease;
+    }
+    .get-passkey:hover {
+      background: linear-gradient(135deg, #1E88E5, #0D47A1);
+      transform: translateY(-2px);
+      box-shadow: 0 4px 10px rgba(0,0,0,0.25);
+    }
+    .get-passkey:active {
+      background: #0D47A1;
+      transform: scale(0.98);
+    }
+
     footer {
       background-color: #222;
       color: #ddd;
@@ -181,9 +203,9 @@
       </button>
 
       <p>
-      <a href="form.html" class="get-passkey">
-        <i class="fas fa-external-link-alt"></i> Get Passkey
-      </a>
+        <a href="form.html" class="get-passkey">
+          <i class="fas fa-external-link-alt"></i> Get Passkey
+        </a>
       </p>
 
       <div id="statusMessage" aria-live="polite"></div>
@@ -191,7 +213,7 @@
   </main>
 
   <footer>
-    <p>© 2025 The Rope Garage Co. • <a href="#">Privacy</a> • <a href="#">Terms</a> • <a href="#">Contact</a></p>
+    <p>&copy; 2025 Roupaswa All Rights Reserved.</p>
   </footer>
 
   <script src="script.js"></script>
