--- a/Departments.html
+++ b/Departments.html
@@ -152,50 +152,55 @@
             <div class="table-container">
                 <table>
                     <tr>
-                        <th>Physics</th>
-                        <td>Mr. Bishal Saha</td>
+                        <th>Subjects</th>
+                        <th>Teachers</th>
                     </tr>
-                    <tr>
-                        <th>Chemistry</th>
-                        <td>Mr. Soumajeet Sarkar</td>
-                    </tr>
-                    <tr>
-                        <th>Biology</th>
-                        <td>Mr. Pijush Mazumdar</td>
-                    </tr>
-                    <tr>
-                        <th>Mathematics</th>
-                        <td>Mr. Bishal Saha</td>
-                    </tr>
-                    <tr>
-                        <th>English Lit. & Lang.</th>
-                        <td>Mrs. Soumi Nath</td>
-                    </tr>
-                    <tr>
-                        <th>Geography</th>
-                        <td>Mrs. Emily Ghosh</td>
-                    </tr>
-                    <tr>
-                        <th>History & Civics</th>
-                        <td>Mrs. Vibha Das</td>
-                    </tr>
-                    <tr>
-                        <th>P.E./Games</th>
-                        <td>Mr. Prakash</td>
-                    </tr>
-                    <tr>
-                        <th>SUPW</th>
-                        <td>Mr. Sonimesh Baskey</td>
-                    </tr>
-                    <tr>
-                        <th>Computer Science</th>
-                        <td>Mr. Soumajeet Sarkar</td>
-                    </tr>
-                    <tr>
-                        <th>Languages</th>
-                        <td>Mrs. Shreya Chandra<br>Mrs. Ferdous Ara Begam</td>
-                    </tr>
-                </table>
+    <tr>
+        <td>Physics</td>
+        <td>Mr. Bishal Saha</td>
+    </tr>
+    <tr>
+        <td>Chemistry</td>
+        <td>Mr. Soumajeet Sarkar</td>
+    </tr>
+    <tr>
+        <td>Biology</td>
+        <td>Mr. Pijush Mazumdar</td>
+    </tr>
+    <tr>
+        <td>Mathematics</td>
+        <td>Mr. Bishal Saha</td>
+    </tr>
+    <tr>
+        <td>English Lit. & Lang.</td>
+        <td>Mrs. Soumi Nath</td>
+    </tr>
+    <tr>
+        <td>Geography</td>
+        <td>Mrs. Emily Ghosh</td>
+    </tr>
+    <tr>
+        <td>History & Civics</td>
+        <td>Mrs. Vibha Das</td>
+    </tr>
+    <tr>
+        <td>P.E./Games</td>
+        <td>Mr. Prakash</td>
+    </tr>
+    <tr>
+        <td>SUPW</td>
+        <td>Mr. Sonimesh Baskey</td>
+    </tr>
+    <tr>
+        <td>Computer Science</td>
+        <td>Mr. Soumajeet Sarkar</td>
+    </tr>
+    <tr>
+        <td>Languages</td>
+        <td>Mrs. Shreya Chandra<br>Mrs. Ferdous Ara Begam</td>
+    </tr>
+</table>
+
             </div>
         </section>
     </main>
@@ -204,4 +209,5 @@
     </footer>        
 </body>
 </html>
+
 
