--- a/timeout.html
+++ b/timeout.html
@@ -4,44 +4,17 @@
   <meta charset="UTF-8">
   <title>Timeout</title>
   <style>
-    body {
-      background-color: #f9f9f9;
-      font-family: "Segoe UI", Arial, sans-serif;
-      text-align: center;
-      padding-top: 80px;
-      color: #333;
-    }
-
+    body { font-family: Arial, sans-serif; text-align: center; padding-top: 80px; background:#f9f9f9; }
     .card {
       display: inline-block;
       padding: 30px 50px;
-      border: 2px solid #cc0000;
       border-radius: 10px;
-      background-color: #fff;
-      box-shadow: 0 0 15px rgba(204, 0, 0, 0.2);
+      background: #fff;
+      box-shadow: 0 0 15px rgba(0,0,0,0.2);
       max-width: 420px;
-      animation: glowPulse 2s ease-in-out infinite alternate;
     }
-
-    h2 {
-      color: #cc0000;
-      margin-bottom: 20px;
-      font-size: 1.8em;
-    }
-
-    p {
-      margin: 10px 0;
-      font-size: 1em;
-      color: #555;
-    }
-
-    #countdown {
-      margin: 20px 0;
-      font-size: 1.2em;
-      font-weight: bold;
-      color: #333;
-    }
-
+    h2 { margin-bottom: 20px; font-size: 1.8em; }
+    #countdown { margin: 20px 0; font-size: 1.2em; font-weight: bold; }
     #retryBtn {
       padding: 10px 20px;
       border: none;
@@ -50,42 +23,70 @@
       color: #fff;
       cursor: not-allowed;
       font-size: 1em;
-      transition: background-color 0.3s ease;
     }
+    #retryBtn.enabled { background: #28a745; cursor: pointer; }
+    #retryBtn.enabled:hover { background: #218838; }
 
-    #retryBtn.enabled {
-      background-color: #28a745;
-      cursor: pointer;
+    /* Glow styles */
+    .session { border:2px solid #ff9800; animation: glowSession 2s ease-in-out infinite alternate; }
+    .ipban   { border:2px solid #cc0000; animation: glowIp 2s ease-in-out infinite alternate; }
+
+    @keyframes glowSession {
+      from { box-shadow: 0 0 10px rgba(255,152,0,0.4); }
+      to   { box-shadow: 0 0 25px rgba(255,152,0,0.7); }
     }
-
-    #retryBtn.enabled:hover {
-      background-color: #218838;
-    }
-
-    @keyframes glowPulse {
-      from { box-shadow: 0 0 10px rgba(204, 0, 0, 0.4); }
-      to   { box-shadow: 0 0 25px rgba(204, 0, 0, 0.7); }
+    @keyframes glowIp {
+      from { box-shadow: 0 0 10px rgba(204,0,0,0.4); }
+      to   { box-shadow: 0 0 25px rgba(204,0,0,0.7); }
     }
   </style>
 </head>
 <body>
-  <div class="card">
-    <h2>Timeout</h2>
-    <p>You entered the wrong passkey too many times.</p>
-    <div id="countdown">Please wait 3:00 minutes...</div>
+  <div class="card" id="cardBox">
+    <h2 id="title">Timeout</h2>
+    <p id="reason"></p>
+    <div id="countdown"></div>
     <button id="retryBtn" disabled>Back to Login</button>
   </div>
 
   <script>
-    let timeLeft = 180; // 3 minutes in seconds
+    // Read type from query string
+    const params = new URLSearchParams(window.location.search);
+    const type = params.get("type");
+
+    const cardBox = document.getElementById("cardBox");
+    const titleEl = document.getElementById("title");
+    const reasonEl = document.getElementById("reason");
     const countdownEl = document.getElementById("countdown");
     const retryBtn = document.getElementById("retryBtn");
 
+    let timeLeft;
+
+    if (type === "ip") {
+      cardBox.classList.add("ipban");
+      titleEl.textContent = "Access Blocked";
+      reasonEl.textContent = "Your IP has been blocked due to too many failed attempts.";
+      timeLeft = 14 * 24 * 60 * 60; // 2 weeks
+    } else {
+      cardBox.classList.add("session");
+      titleEl.textContent = "Temporary Timeout";
+      reasonEl.textContent = "Too many wrong passkeys in this session.";
+      timeLeft = 180; // 3 minutes
+    }
+
     const timer = setInterval(() => {
       timeLeft--;
-      const minutes = Math.floor(timeLeft / 60);
-      const seconds = timeLeft % 60;
-      countdownEl.textContent = `Please wait ${minutes}:${seconds.toString().padStart(2, '0')} minutes...`;
+      if (type === "ip") {
+        const days = Math.floor(timeLeft / (24*60*60));
+        const hours = Math.floor((timeLeft % (24*60*60)) / 3600);
+        const minutes = Math.floor((timeLeft % 3600) / 60);
+        const seconds = timeLeft % 60;
+        countdownEl.textContent = `Please wait ${days}d ${hours}h ${minutes}m ${seconds}s before retrying.`;
+      } else {
+        const minutes = Math.floor(timeLeft / 60);
+        const seconds = timeLeft % 60;
+        countdownEl.textContent = `Please wait ${minutes}:${seconds.toString().padStart(2,'0')} minutes...`;
+      }
 
       if (timeLeft <= 0) {
         clearInterval(timer);
