--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
           <i class="fas fa-external-link-alt"></i> Get Passkey
         </a>
       </p>
-
+      <input type="hidden" id="maxAttempts" value="3">
       <div id="statusMessage" aria-live="polite"></div>
     </div>
   </main>
@@ -219,3 +219,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
