--- a/index.html
+++ b/index.html
@@ -166,27 +166,23 @@
   <h1>Secure Access Portal</h1>
 
   <main>
-    <div class="captchaBox" id="captchaBox">
-      <div class="input-group">
-        <label for="passkeyInput" class="sr-only">Passkey</label>
-        <i class="fas fa-lock"></i>
-        <input type="password" id="passkeyInput" placeholder="Enter Passkey" autocomplete="off" aria-describedby="statusMessage">
-      </div>
+    <!-- index.html (excerpt of the important parts) -->
+<div class="captchaBox" id="captchaBox">
+  <div class="input-group">
+    <label for="passkeyInput" class="sr-only">Passkey</label>
+    <i class="fas fa-lock"></i>
+    <input type="password" id="passkeyInput" placeholder="Enter Passkey" autocomplete="off" aria-describedby="statusMessage">
+  </div>
 
-      <button class="btn" id="passkeyBtn"><i class="fas fa-key"></i> Verify </button>
+  <button class="btn" id="passkeyBtn"><i class="fas fa-key"></i> Verify </button>
 
-      <button class="btn" id="myButton" type="button" disabled>
-        <i class="fas fa-link"></i> Proceed
-      </button>
+  <button class="btn" id="myButton" type="button" disabled>
+    <i class="fas fa-link"></i> Proceed
+  </button>
 
-      <p>
-        <a href="form.html" class="get-passkey">
-          <i class="fas fa-external-link-alt"></i> Get Passkey
-        </a>
-      </p>
+  <div id="statusMessage" aria-live="polite"></div>
+</div>
 
-      <div id="statusMessage" aria-live="polite"></div>
-    </div>
   </main>
 
   <footer>
@@ -194,5 +190,6 @@
   </footer>
 
   <script src="script.js"></script>
+  
 </body>
 </html>
